feat/exercise: lession 3
